[package]
name = "solana-fib-cpi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-account-info = "2"
solana-cpi = "2"
solana-instruction = "2"
solana-msg = "2"
solana-program-entrypoint = "2"
solana-pubkey = { version = "2", features = ["curve25519"] }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-heap", "custom-panic"))',
]

[dev-dependencies]
solana-program-test = "2"
solana-sdk = "2"
tokio = { version = "1", features = ["full"] }
